examples/basic/invalid/invalid_syntax_1.scm
; Erro sintático: parêntese de fechamento sem abertura correspondente
(define x 10)
(display x))
